Revert "use hibernate.temp.use_jdbc_metadata_defaults=false everywhere like for HibernateClassic (#616)" (#621)
This reverts commit 6bc8cff280863d0d427f28ef06de63122662054d.